dev-kub/forum-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forum-laravel
  namespace: devsecops
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: abraaojs/forum-app-35
        ports:
        - containerPort: 80
