dev-kub/forum-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forum-laravel-web
  namespace: devsecops
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: backend
        image: abraaojs/forum-web-v1
        ports:
        - containerPort: 80
