dev-kub/svc-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: devsecops
  labels:
    app: app
spec:
  ports:
    - port: 9000
  selector:
    app: backend
