dev-kub/svc-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: devsecops
  labels:
    app: web
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: web
