dev-kub/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: devsecops
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - dev-forum.hackathonshift.com.br
    secretName: dev-forum-tls
  rules:
  - host: dev-forum.hackathonshift.com.br
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
